src/main/default/objects/narrate_LogEntry__c/narrate_LogEntry__c.object-meta.xml
<CustomObject>
    <label>Log Entry</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>