src/main/default/objects/narrate_LogEntry__c/fields/ExecutionContext__c.field-meta.xml
<CustomField>
    <fullName>ExecutionContext__c</fullName>
    <label>Log</label>
    <referenceTo>narrate_ExecutionContext__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>narrate_LogEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>