src/main/default/objects/narrate_LogEntry__c/fields/narrate_Context__c.field-meta.xml
<CustomField>
    <fullName>narrate_Context__c</fullName>
    <label>Unique Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>