src/main/default/objects/narrate_LogEntry__c/fields/narrate_Level__c.field-meta.xml
<CustomField>
    <fullName>narrate_Level__c</fullName>
    <defaultValue>&quot;DEBUG&quot;</defaultValue>
    <label>Level</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>