src/main/default/objects/narrate_LogEntry__c/fields/narrate_Line__c.field-meta.xml
<CustomField>
    <fullName>narrate_Line__c</fullName>
    <label>Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>