src/main/default/objects/narrate_LogEntry__c/fields/narrate_Link__c.field-meta.xml
<CustomField>
    <fullName>narrate_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + &#39;/&#39; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>