src/main/default/objects/narrate_LogEntry__c/fields/narrate_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>narrate_Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>