src/main/default/objects/narrate_LogEntry__c/fields/narrate_User__c.field-meta.xml
<CustomField>
    <fullName>narrate_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>narrate_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>