src/main/default/objects/narrate_LogEntry__c/listViews/AllLogs.listView-meta.xml
<ListView>
    <fullName>AllLogs</fullName>
    <columns>NAME</columns>
    <columns>narrate_Level__c</columns>
    <columns>narrate_Class__c</columns>
    <columns>narrate_Method__c</columns>
    <columns>narrate_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>